<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    tools:context="pl.lss.ccms.android.OrderDetailActivity">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/summarized"
        android:textColor="#D50000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/required_pack" />

        <TextView
            android:id="@+id/order_required_pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D50000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/products" />

        <TextView
            android:id="@+id/order_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D50000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/value" />

        <TextView
            android:id="@+id/order_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D50000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/order_detail_button_add" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_list"
            android:id="@+id/order_detail_button_back_to_orders_list" />
    </LinearLayout>

    <ListView
        android:id="@+id/order_items_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
