<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pl.lss.ccms.android.ItemDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/item_detail_product_id"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:hint="@string/id"
            android:inputType="phone" />

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:id="@+id/item_detail_button_search" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="1"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/supplier"
            android:id="@+id/textView"
            android:autoText="false"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/item_detail_supplier_code"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:nestedScrollingEnabled="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/colour"
            android:id="@+id/textView7"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_detail_product_colour"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:id="@+id/textView8"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_detail_product_gender"
            android:paddingTop="10dp"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/pack"
            android:id="@+id/textView2"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/item_detail_product_pack_size"
            android:paddingTop="10dp"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/size"
            android:id="@+id/textView9"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/item_detail_product_size"
            android:paddingTop="10dp"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:baselineAligned="false"
        android:weightSum="1">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/required_pack"
            android:id="@+id/textView3"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_detail_required_pack"
            android:inputType="phone" />

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:id="@+id/item_detail_button_save"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="Ilość produktów"
            android:id="@+id/textView5"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_detail_product_quantity"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:id="@+id/textView4"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_detail_product_price"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:text="@string/value"
            android:id="@+id/textView6"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_detail_value"
            android:layout_weight="0" />
    </LinearLayout>

</LinearLayout>
